--- a/index.html
+++ b/index.html
@@ -157,7 +157,17 @@
         grid-template-rows: 30px 75px 75px 33.75px 33.75px 22.5px 18.75px;
         font-size: 20%;
       }
-      }      
+      }    
+        @media(max-width: 750px){
+          body{
+            background-color: #fddde6 ;
+            font-family: 'Poppins', sans-serif;
+            display: flex;
+            gap: 50px;
+           flex-direction: column;
+
+        }
+        }
 
     </style>
 </head>
