--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
       }
       }    
         @media(max-width: 750px){
+          @media(max-width: 750px){
           body{
             background-color: #fddde6 ;
             font-family: 'Poppins', sans-serif;
@@ -166,6 +167,10 @@
             gap: 50px;
            flex-direction: column;
 
+        }
+        .verse{
+          padding: 30px;
+          font-size: 1.5rem;
         }
         }
 
